--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,24 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/scholarship
     url: jdbc:mysql://123.57.78.6:3306/scholarship
     username: root
     password: 1234
+
+  redis:
+    database: 0
+    host: 123.57.78.6
+    port: 6379
+    password: 235610
+    timeout: 5000
+    jedis:
+      pool:
+        max-active: 100
+        max-wait: 2000
+        max-idle: 500
+        min-idle: 8
+
 mybatis-plus:
   mapper-locations: classpath*:mapper/*Mapper.xml
   type-aliases-package: cn.edu.haue.scholarship.entity
